--- a/index.ipynb
+++ b/index.ipynb
@@ -400,12 +400,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    return output_at(list ox_value + delta_x) - output_at(x_value)"
+    "    return output_at(list_of_terms, x_value + delta_x) - output_at(list_of_terms, x_value)"
    ]
   },
   {
