--- a/index.ipynb
+++ b/index.ipynb
@@ -547,7 +547,7 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return round(,3)"
+    "    return round(/ delt,3)"
    ]
   },
   {
