--- a/index.ipynb
+++ b/index.ipynb
@@ -547,7 +547,7 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return round((output_at(list_of_terms, x_value + delta_x) + / delta_x , 3)"
+    "    return round((output_at(list_of_terms, x_value + delta_x) + output_at(list_of_term) / delta_x , 3)"
    ]
   },
   {
