Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -542,12 +542,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-25-a070fa6a7766>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-a070fa6a7766>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return round(((output_at(list_of_terms, x_value + delta_x) - output_at(list_of_terms, x_value)) / delta_x , 3)\u001b[0m\n\u001b[0m                                                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return round(((output_at(list_of_terms, x_value + delta_x) - output_at(list_of_terms, x_value) / delta_x , 3)"
+    "    return round(((output_at(list_of_terms, x_value + delta_x) - output_at(list_of_terms, x_value)) / delta_x , 3)"
    ]
   },
   {
