--- a/index.ipynb
+++ b/index.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,9 +612,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [0.0, 2, 4.0],\n",
+       " 'y': [15.0, 23, 31.0],\n",
+       " 'mode': 'line',\n",
+       " 'name': \"f' (x) = 4.0\",\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tangent_line_four_x_plus_fifteen = derivative_trace(four_x_plus_fifteen, 2, line_length = 4, delta_x = .01)\n",
     "tangent_line_four_x_plus_fifteen"
